# aws-lambda-rust-runtime

lambda/: Cargo.toml
lambda-attributes/: Cargo.toml
lambda-http/: Cargo.toml
