[package]
name = "lambda"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
description = "AWS Lambda Runtime."
edition = "2018"

[features]
# no features by default
default = ["simulated", "derive"]
simulated = []
derive = ["lambda-attributes"]

[dependencies]
tokio = { version = "^0.2", features = ["full"] }
hyper = "^0.13"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tower-service = "^0.3"
bytes = "^0.6"
http = "^0.2"
lambda-attributes = { path = "../lambda-attributes", version = "0.1.0", optional = true}
async-stream = "^0.3"
futures = "^0.3"
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-error = "^0.1"
